
  [ Kiwinote ]
  * softwarecenter/view/appview.py:
    - fix crash when switching from a specific channel in the available pane
      to the same channel in the installed pane
  * softwarecenter/view/historypane.py:
    - use named arguments for history entries - thanks to dpm (LP: #690283)
  * softwarecenter/view/pendingview.py:
    - use a scrollbar when we have many transactions (LP: #642299)
  
 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 16 Dec 2010 20:41:09 -0500

software-center (3.1.7) natty; urgency=low

  [ Michael Vogt ]
  * refactor "SoftwarePane.refresh_apps()" code, this ensures
    the app lists are only ever (re)created if something changes
    and so avoiding nasty UI flashes (code is simpler now as well)
  * softwarecenter/models/appstore.py:
    - fix search ranking for exact package name matches (thanks to
      seb128)
    - display exact pkgname matches even if they are a technical
      item (e.g. nautilus)
  * softwarecenter/view/appview.py:
    - fallback to previous (slower) method to obtain the pkgname
      from xapian if the DB is not yet rebuild (thanks to seb128
      for reporting this problem)
  * softwarecenter/apt/apthistory.py, test/test_apthistory.py:
    - fix apthistory test by allowing noncached operations
  * softwarecenter/models/appstore.py:
    - fix potential crash in tests
  * softwarecenter/db/update.py:
    - test if the db support spelling suggestions before enabling
      them to ensure its not crashing for the inmemory DB
  
  [ Matthew McGowan ]
  * merged lp:~mmcg069/software-center/bubbles, this gives us
    pretty bubbles in the viewswitcher

  [ Gary Lasker ]
  * softwarecenter/models/appstore.py,
    softwarecenter/view/catview_gtk.py:
    - thread listview refreshes to restore UI feedback with
      recent experimental-fastlist improvements 
  * test/test_search_per_spec.py:
    - tweak test for threaded listview refreshes
  * softwarecenter/view/availablepane.py,